--- a/index.html
+++ b/index.html
@@ -45,6 +45,9 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
     />
+
+    <!-- Main CSS  -->
+    <link rel="stylesheet" href="css/style.css" />
   </head>
 
   <body>
