Complete layout contact

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                   <a class="nav-link" href="#">Blog</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Contact</a>
+                  <a class="nav-link" href="view/pages/contact.html">Contact</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="#">About</a>
@@ -304,7 +304,7 @@
       crossorigin="anonymous"
     ></script>
     <!-- back to top cody house js  -->
-    <script src="./js/back-to-top-master/assets/js/util.js"></script>
-    <script src="./js/back-to-top-master/assets/js/main.js"></script>
+    <script src="./vendor/back-to-top-master/assets/js/util.js"></script>
+    <script src="./vendor/back-to-top-master/assets/js/main.js"></script>
   </body>
 </html>
