--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             <a href="#">Login</a>
           </li>
           <li>
-            <a href="#">Register</a>
+            <a href="./view/auth/register.html">Register</a>
           </li>
         </ul>
       </div>
@@ -1288,7 +1288,7 @@
     </div>
     <section class="copyright text-center">
       <div class="container-fluid">
-        <p class="mb-0">
+        <p class="p-4">
           All Right Reserved © 2023 Designthemes
         </p>
       </div>
@@ -1327,8 +1327,8 @@
     });
   </script>
   <!-- back to top cody house js  -->
-  <script src="./js/back-to-top-master/assets/js/util.js"></script>
-  <script src="./js/back-to-top-master/assets/js/main.js"></script>
+  <script src="./vendor/back-to-top-master/assets/js/util.js"></script>
+  <script src="./vendor/back-to-top-master/assets/js/main.js"></script>
 </body>
 
 </html>
