fix bug CSS homepage continue

--- a/index.html
+++ b/index.html
@@ -1293,7 +1293,7 @@
     </div>
     <section class="copyright text-center">
       <div class="container-fluid">
-        <p class="mb-0">
+        <p class="py-4">
           All Right Reserved © 2024 Designthemes
         </p>
       </div>
