--- a/index.html
+++ b/index.html
@@ -62,9 +62,6 @@
             </a>
           </li>
           <li>
-            <a href="#">Login</a>
-          </li>
-          <li>
             <a href="./view/auth/register.html">Register</a>
           </li>
         </ul>
@@ -83,7 +80,7 @@
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse justify-content-end navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav d-flex mb-2 mb-lg-0">
+            <ul class="navbar-nav d-flex mb-2 mb-lg-0 bg-orange-50">
               <li class="nav-item">
                 <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
               </li>
