Fix responsive some block + Optimize data show

--- a/index.html
+++ b/index.html
@@ -1326,6 +1326,24 @@
         disableOnInteraction: false, // giữ autoplay ngay cả khi người dùng tương tác
       },
       loop: true, // lặp lại các slide
+      breakpoints: {
+        430: {
+          slidesPerView: 2,
+          spaceBetween: 20,
+        },
+        768: {
+          slidesPerView: 3,
+          spaceBetween: 20,
+        },
+        1024: {
+          slidesPerView: 4,
+          spaceBetween: 20,
+        },
+        1200: {
+          slidesPerView: 5,
+          spaceBetween: 20,
+        }
+      },
     });
   </script>
 
